--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="jcalendar-1.4.jar"/>
-	<classpathentry kind="lib" path="/Volumes/Sin título/user/Triboga/Dropbox/Dropbox/Hector/Programación/Librerias/sqljdbc42.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admincenec/Desktop/sqljdbc_6.0/esn/jre8/sqljdbc42.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
